# dcom

./: CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt  CalculatorClient.h  Client.cpp
Common/: CMakeLists.txt  ClientMessageHandler.cpp  Marshaller.cpp  NamedPipe.cpp  ObjectManager.cpp  RPCClient.cpp  RPCServer.cpp  ServerMessageHandler.cpp
Common/include/: Calculator.h  CalculatorServer.h  ClientMessageHandler.h  Constants.h  Marshaller.h  NamedPipe.h  ObjectManager.h  RPC.h  RPCClient.h  RPCServer.h  ServerMessageHandler.h  ServerStub.h  Utils.h
Server/: CMakeLists.txt  Calculator.cpp  Server.cpp
